[gd_scene load_steps=4 format=3 uid="uid://cbukaku8ily0x"]

[ext_resource type="PackedScene" uid="uid://dafd36mciqna5" path="res://card/template/card.tscn" id="1_mqnle"]
[ext_resource type="Script" uid="uid://dqcgjwba72qnj" path="res://card/template/building/card_building.gd" id="2_hkucr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjlel"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Card" instance=ExtResource("1_mqnle")]
script = ExtResource("2_hkucr")

[node name="Body" parent="Border/ColorRect" index="1"]
anchor_top = 0.15
anchor_bottom = 1.0
offset_bottom = -10.0

[node name="Typeline" parent="Border/ColorRect/Body" index="0"]
size_flags_vertical = 0

[node name="EffectContainer" parent="Border/ColorRect/Body" index="1"]
size_flags_vertical = 3

[node name="EffectContainer2" type="PanelContainer" parent="Border/ColorRect/Body" index="2"]
custom_minimum_size = Vector2(740, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_rjlel")

[node name="Effect2" type="Label" parent="Border/ColorRect/Body/EffectContainer2" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 48
text = "Here's the Card Effect. It may be multiple lines long, and that's okay"
autowrap_mode = 2

[node name="EffectContainer3" type="PanelContainer" parent="Border/ColorRect/Body" index="3"]
custom_minimum_size = Vector2(740, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_rjlel")

[node name="Effect3" type="Label" parent="Border/ColorRect/Body/EffectContainer3" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 48
text = "Here's the Card Effect. It may be multiple lines long, and that's okay"
autowrap_mode = 2
